Did some modifications to JS for pleymaths. Still not aligned correctly

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -46,7 +46,7 @@ body.about h1 {
     text-align:center;
 }
 
-.playtmaths {
+#plates {
     text-align:center;
     clear:both;
     padding-top:25px;
